<resources>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="sip_settings">Internet call settings</string>
    <string name="sip_receive_calls">Receive incoming calls</string>
    <string name="sip_receive_calls_summary">Reduces battery life</string>
    <string name="sip_call_options_title">Use Internet calling</string>
    <string name="sip_call_options_wifi_only_title">Use internet calling (WLAN only)</string>
    <string name="sip_account_list">SIP accounts</string>
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title">Vibrate</string>
    <string name="voicemail_notification_vibrate_when_default">never</string>
    <string name="add_zero_prefix">Add 0 prefix while dialing mobile number</string>
    <string name="answer_features_setting_category_miui">Answer settings</string>
    <string name="answer_widget_dialog_title_miui">Select answering gesture</string>
    <string name="answer_widget_title_miui">Answering gesture</string>
    <string name="answer_state_setting_title">Incoming call status settings</string>
    <string name="answer_state_setting_summary">Settings for flip to mute, proximity sensor, etc.</string>
    <string name="answer_state_setting_title_miui">Incoming call status settings</string>
    <string name="auto_answer_pref_title_miui">Auto answer</string>
    <string name="auto_country_code_miui">Auto-add country code</string>
    <string name="auto_country_code_sum_miui">Automatically adds country code before dialing known contacts. The number with country code will be dailed directly.</string>
    <string name="autoip_miui">Auto IP dialing</string>
    <string name="auto_ip_setting_miui">Automatic IP settings</string>
    <string name="autoip_sum_miui">Add IP prefix to a foreign number. Enter current area code below.</string>
    <string name="auto_ip_exception_miui">"Numbers that don't need IP prefix"</string>
    <string name="auto_ip_support_local_numbers">Support local numbers</string>
    <string name="auto_record_call_summary_miui">Calls are recorded and save into the MIUI/sound_recorder/call_rec folder in the SD card</string>
    <string name="auto_record_call_title_miui">Record automatically</string>
    <string name="auto_record_scenario_title_miui">Set auto recording</string>
    <string name="auto_record_whitelist_miui">Setup specific numbers</string>
    <string name="auto_redial_pref_summary_miui">Redial automatically if line is busy</string>
    <string name="auto_redial_pref_title_miui">Auto redial</string>
    <string name="auto_retry_mode_summary_miui">Enable auto retry mode</string>
    <string name="auto_retry_mode_title_miui">Auto retry</string>
    <string name="call_assistant_miui">Dialing assistant</string>
    <string name="caller_id_sum_miui">Hide / Show my number for outgoing calls (if network support)</string>
    <string name="caller_id_title_miui">Caller ID</string>
    <string name="call_forwarding_number_hint_miui">Enter the number to forward to</string>
    <string name="call_forwarding_settings_miui">Call forward settings</string>
    <string name="call_log_number_limit_miui">Call log storage</string>
    <string name="call_log_number_limit_summary_miui">Setting the amount of call log to storage</string>
    <string name="call_record_setting_miui">Record settings</string>
    <string name="call_recording_notification_summary_miui">Show notification in status bar when recording is complete</string>
    <string name="call_recording_notification_title_miui">Recording call notification</string>
    <string name="call_settings_category_miui">Call settings</string>
    <string name="call_settings_miui">Call settings</string>
    <string name="call_waiting_sum_miui">During a call, notify me on incoming calls</string>
    <string name="carrier_related_setting_catory_miui">Carrier related settings</string>
    <string name="cfb_title_miui">Forward when busy</string>
    <string name="cfnrc_title_miui">Forward when unreachable</string>
    <string name="cfnry_title_miui">Forward When unanswered</string>
    <string name="cfu_title_miui">Always forward</string>
    <string name="change_pin2_miui">Change PIN2</string>
    <string name="connect_disconnect_vibrate_summary_miui" />
    <string name="connect_disconnect_vibrate_title_miui">Vibrate level when receiver ans/hangs up</string>
    <string name="crystaltalk_summary_miui">Call audio configuration optimization</string>
    <string name="crystaltalk_title_miui">NICAM setting</string>
    <string name="current_areacode_miui">Current area code</string>
    <string name="current_areacode_sum_miui">Area code of current location, or roaming area code if you are roaming. For example: 010</string>
    <string name="cw_title_miui">Call waiting</string>
    <string name="default_contacts_countrycode_hint_miui">For example: 86</string>
    <string name="default_contacts_countrycode_miui">Default contacts country code</string>
    <string name="disable_all_cf_miui">Disable all call-forwarding features</string>
    <string name="dtmf_tones_summary_miui">Set the length of DTMF tones</string>
    <string name="dtmf_tones_title_miui">DTMF tones</string>
    <string name="enable_miui">Enable</string>
    <string name="enable_proximity_summary_miui">Enable proximity sensor to disable screen display during calls</string>
    <string name="enable_proximity_title_miui">Enable proximity sensor</string>
    <string name="enable_telocation_title_miui">Show location</string>
    <string name="enforce_proximity_summary_miui">Prevent misuse of phone when not being used</string>
    <string name="enforce_proximity_title_miui">Enforce proximity sensor</string>
    <string name="fdn_change_pin_sum_miui">Change PIN for FDN access</string>
    <string name="fdn_disabled_miui">Fixed dialing numbers are disabled</string>
    <string name="fdn_enabled_miui">Fixed dialing numbers are enabled</string>
    <string name="fdn_miui">Fixed dialing numbers</string>
    <string name="fdn_summary_miui">The above options are all disabled when FDN are enabled</string>
    <string name="hac_mode_summary_miui">Turn on hearing aid compatibility</string>
    <string name="hac_mode_title_miui">Hearing aids</string>
    <string name="handon_ringer_summary_miui">In vain when vibration enabled for incoming call</string>
    <string name="handon_ringer_title_miui">Quiet ring on pickup</string>
    <string name="incall_screen_background_title_miui">Call screen background</string>
    <string name="incall_screen_background_summary_miui">"Use lockscreen wallpaper when there's no avatar"</string>
    <string name="ip_prefix_miui">IP prefix</string>
    <string name="ip_prefix_sum_miui">"Carrier's IP prefix: %s"</string>
    <string name="manage_fdn_list_miui">FDN list</string>
    <string name="manage_fdn_list_sum_miui">Manage phone number list</string>
    <string name="other_settings_miui">Other settings</string>
    <string name="pref_custom_location_summary_miui">Customize regional attribution and number attribution</string>
    <string name="pref_custom_location_title_miui">Customize attribution</string>
    <string name="reject_via_sms_miui">Reject via sms</string>
    <string name="reject_via_sms_summary_miui">Set the SMS sent to the caller when you reject</string>
    <string name="sip_settings_miui">Internet call</string>
    <string name="telocation_setting_miui">Location setting</string>
    <string name="telocation_show_settings_miui">Display settings</string>
    <string name="tty_mode_option_summary_miui">Set TTY mode</string>
    <string name="tty_mode_option_title_miui">TTY mode</string>
    <string name="turnover_mute_title_miui">Flip to silence</string>
    <string name="turnover_mute_summary_miui">Flip to silence while the is phone placed horizontally</string>
    <string name="voicemail_miui">Voicemail</string>
    <string name="voicemail_provider_miui">Voicemail service</string>
    <string name="voicemail_provider_sum_miui">Choose voicemail service</string>
    <string name="voicemail_settings_miui">Voicemail settings</string>
    <string name="voicemail_settings_number_hint_miui">Enter voice mailbox number</string>
    <string name="voicemail_settings_number_title_miui">Voicemail number</string>
    <string name="voice_privacy_miui">Voice privacy</string>
    <string name="voice_privacy_summary_miui">Enable enhanced privacy mode</string>
    <string name="call_waiting_tone_title_miui">Call waiting prompt tone</string>
    <string name="cdma_display_precise_call_state_title_miui">Display precise call state</string>
    <string name="cdma_display_precise_call_state_summary_miui">CDMA call timer is restrict by carrier. If supported by carrier then call state can be shown precisely.</string>
    <string name="missed_call_notify_times_title_miui">Missed call reminder</string>
    <string name="missed_call_notify_times_summary_miui">Repeats reminders every 5 minutes by default. Select number of reminders.</string>
    <string name="dial_pad_touch_tone_setting_miui">Dial pad touch tones settings</string>
    <string name="t9_indexing_method_title_miui">T9 search setting</string>
</resources>