<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings_miui"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceCategory android:title="@string/carrier_related_setting_catory_miui">
        <PreferenceScreen android:persistent="false" android:title="@string/call_forwarding_settings_miui" android:key="button_call_forwarding">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiGsmUmtsCallForwardOptions" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/cw_title_miui" android:key="button_call_waiting" android:summary="@string/call_waiting_sum_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiGsmUmtsCallWaitingSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/caller_id_title_miui" android:key="button_caller_id" android:summary="@string/caller_id_sum_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiGsmUmtsCallerIdSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/call_forwarding_settings_miui" android:key="button_cdma_call_forwarding">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiCdmaCallForwardOptions" />
        </PreferenceScreen>
        <com.android.phone.MiuiCdmaCallWaitingPreference android:persistent="false" android:title="@string/cw_title_miui" android:key="button_cdma_cw" android:summary="@string/call_waiting_sum_miui" android:dialogTitle="@string/cw_title_miui" />
        <PreferenceScreen android:persistent="false" android:title="@string/fdn_miui" android:key="button_fdn" android:summary="@string/fdn_summary_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiFdnSetting" />
        </PreferenceScreen>
        <com.android.phone.CdmaVoicePrivacyCheckBoxPreference android:persistent="false" android:title="@string/voice_privacy_miui" android:key="button_voice_privacy" android:summary="@string/voice_privacy_summary_miui" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/answer_features_setting_category_miui">
        <ListPreference android:entries="@array/answer_widget_entries_miui" android:title="@string/answer_widget_title_miui" android:key="button_answer_widget" android:defaultValue="1" android:dialogTitle="@string/answer_widget_dialog_title_miui" android:entryValues="@array/answer_widget_entry_values_miui" />
        <PreferenceScreen android:title="@string/auto_answer_pref_title_miui" android:key="button_auto_answer_screen">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiAutoAnswerSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/reject_via_sms_miui" android:key="button_respond_via_sms_key" android:summary="@string/reject_via_sms_summary_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiRespondViaSmsManagerSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/answer_state_setting_title" android:key="button_answer_state_setting" android:summary="@string/answer_state_setting_summary">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiAnswerStateSetting" />
        </PreferenceScreen>
        <ListPreference android:entries="@array/missed_call_notify_times_entries_miui" android:title="@string/missed_call_notify_times_title_miui" android:key="button_missed_call_notify_times" android:summary="@string/missed_call_notify_times_summary_miui" android:defaultValue="0" android:dialogTitle="@string/missed_call_notify_times_title_miui" android:entryValues="@array/missed_call_notify_times_entry_values_miui" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/call_settings_category_miui">
        <CheckBoxPreference android:title="@string/cdma_display_precise_call_state_title_miui" android:key="button_display_precise_call_state" android:summary="@string/cdma_display_precise_call_state_summary_miui" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/auto_redial_pref_title_miui" android:key="button_auto_redial" android:summary="@string/auto_redial_pref_summary_miui" android:defaultValue="false" />
        <PreferenceScreen android:title="@string/call_record_setting_miui" android:key="button_call_record_setting">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiCallRecordSetting" />
        </PreferenceScreen>
        <ListPreference android:entries="@array/connect_disconnect_vibrate_entries_miui" android:title="@string/connect_disconnect_vibrate_title_miui" android:key="button_connect_disconnect_vibrate" android:summary="@string/connect_disconnect_vibrate_summary_miui" android:defaultValue="100" android:dialogTitle="@string/connect_disconnect_vibrate_title_miui" android:entryValues="@array/connect_disconnect_vibrate_entry_values_miui" />
        <ListPreference android:entries="@array/call_waiting_tone_entries_miui" android:title="@string/call_waiting_tone_title_miui" android:key="button_call_waiting_tone" android:defaultValue="0" android:dialogTitle="@string/call_waiting_tone_title_miui" android:entryValues="@array/call_waiting_tone_entry_values_miui" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings_miui">
        <ListPreference android:persistent="true" android:entries="@array/t9_indexing_method_entries_miui" android:title="@string/t9_indexing_method_title_miui" android:key="button_t9_index_method_settings" android:entryValues="@array/t9_indexing_method_entry_values_miui" />
        <PreferenceScreen android:title="@string/dial_pad_touch_tone_setting_miui" android:key="button_dial_pad_touch_tone_setting">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiDialpadTouchToneSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/telocation_setting_miui" android:key="button_telocation_setting">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiTelocationSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/auto_ip_setting_miui" android:key="button_auto_ip_setting" android:summary="@string/ip_prefix_sum_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiAutoIpSetting" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/sip_settings_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.sip.MiuiSipSettings" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/voicemail_settings_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiVoicemailSetting" />
        </PreferenceScreen>
        <CheckBoxPreference android:title="@string/incall_screen_background_title_miui" android:key="button_incall_screen_background" android:summary="@string/incall_screen_background_summary_miui" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/call_log_number_limit_miui" android:summary="@string/call_log_number_limit_summary_miui">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiCalllogNumberLimitSetting" />
        </PreferenceScreen>
        <ListPreference android:persistent="false" android:entries="@array/voice_quality_ui_values_miui" android:title="@string/crystaltalk_title_miui" android:key="button_crystal_talk_settings" android:summary="@string/crystaltalk_summary_miui" android:entryValues="@array/voice_quality_ui_values_miui" />
        <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title_miui" android:key="button_auto_retry" android:summary="@string/auto_retry_mode_summary_miui" />
        <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries_miui" android:title="@string/tty_mode_option_title_miui" android:key="button_tty_mode" android:summary="@string/tty_mode_option_summary_miui" android:entryValues="@array/tty_mode_values_miui" />
        <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title_miui" android:key="button_hac" android:summary="@string/hac_mode_summary_miui" />
        <ListPreference android:entries="@array/dtmf_tone_entries_miui" android:title="@string/dtmf_tones_title_miui" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary_miui" android:entryValues="@array/dtmf_tone_values_miui" />
    </PreferenceCategory>
</PreferenceScreen>