<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/answer_state_setting_title_miui"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <CheckBoxPreference android:title="@string/turnover_mute_title_miui" android:key="button_turnover_mute" android:summary="@string/turnover_mute_summary_miui" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/handon_ringer_title_miui" android:key="button_handon_ringer" android:summary="@string/handon_ringer_summary_miui" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/enable_proximity_title_miui" android:key="button_enable_proximity" android:summary="@string/enable_proximity_summary_miui" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/enforce_proximity_title_miui" android:key="button_enforce_proximity_during_ringing" android:summary="@string/enforce_proximity_summary_miui" android:dependency="button_enable_proximity" android:defaultValue="false" />
</PreferenceScreen>