<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/telocation_setting_miui"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceCategory android:title="@string/telocation_show_settings_miui">
        <CheckBoxPreference android:persistent="false" android:title="@string/enable_telocation_title_miui" android:key="button_enable_telocation" android:defaultValue="true" />
        <PreferenceScreen android:title="@string/pref_custom_location_title_miui" android:summary="@string/pref_custom_location_summary_miui" android:dependency="button_enable_telocation">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiCustomLocationActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/call_assistant_miui">
        <EditTextPreference android:persistent="false" android:hint="@string/default_contacts_countrycode_hint_miui" android:title="@string/default_contacts_countrycode_miui" android:key="button_text_default_contacts_countrycode" android:inputType="phone" />
        <CheckBoxPreference android:persistent="false" android:title="@string/auto_country_code_miui" android:key="button_auto_country_code" android:summary="@string/auto_country_code_sum_miui" android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>