<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_record_setting_miui"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <CheckBoxPreference android:title="@string/call_recording_notification_title_miui" android:key="button_call_recording_notification" android:summary="@string/call_recording_notification_summary_miui" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/auto_record_call_title_miui" android:key="button_auto_record_call" android:summary="@string/auto_record_call_summary_miui" android:defaultValue="false" />
    <miui.preference.RadioButtonPreferenceCategory android:title="@string/auto_record_scenario_title_miui" android:key="button_auto_record_scenario" />
    <PreferenceScreen android:layout="?android:preferenceLayoutChild" android:title="@string/auto_record_whitelist_miui" android:key="button_auto_record_whitelist" android:dependency="button_auto_record_call">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MiuiAutoRecordWhiteListSetting" />
    </PreferenceScreen>
</PreferenceScreen>