<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:layout_gravity="center_horizontal" android:id="@id/dialpad" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow style="@style/Miui.TableRow">
        <ImageButton android:id="@id/one" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_one" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/two" android:background="@drawable/ecc_dial_middle_button_bg_miui" android:contentDescription="@string/description_image_button_two" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/three" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_three" style="@style/Miui.TableColumn" />
    </TableRow>
    <TableRow style="@style/Miui.TableRow">
        <ImageButton android:id="@id/four" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_four" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/five" android:background="@drawable/ecc_dial_middle_button_bg_miui" android:contentDescription="@string/description_image_button_five" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/six" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_six" style="@style/Miui.TableColumn" />
    </TableRow>
    <TableRow style="@style/Miui.TableRow">
        <ImageButton android:id="@id/seven" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_seven" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/eight" android:background="@drawable/ecc_dial_middle_button_bg_miui" android:contentDescription="@string/description_image_button_eight" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/nine" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_nine" style="@style/Miui.TableColumn" />
    </TableRow>
    <TableRow style="@style/Miui.TableRow">
        <ImageButton android:id="@id/star" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_star" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/zero" android:background="@drawable/ecc_dial_middle_button_bg_miui" android:contentDescription="@string/description_image_button_zero" style="@style/Miui.TableColumn" />
        <ImageButton android:id="@id/pound" android:background="@drawable/ecc_dial_button_bg_miui" android:contentDescription="@string/description_image_button_pound" style="@style/Miui.TableColumn" />
    </TableRow>
</TableLayout>